syntax = "proto3";

option csharp_namespace = "PulseApp.Protos";

import "Protos/common.proto";

package employee;

service EmployeeManager {

  rpc GetEmployees (common.EmptyRequest) returns (EmployeesResponse);
  rpc GetEmployee (common.IdRequest) returns (EmployeeResponse);
  rpc DeleteEmployee (common.IdRequest) returns (common.EmptyResponse);
  rpc AddEmployee (EmployeeAddRequest) returns (common.IdResponse);
  rpc UpdateEmployee (EmployeeUpdateRequest) returns (common.EmptyResponse);

}

message EmployeesResponse {
    repeated EmployeeProto employees = 1;
}

message EmployeeResponse {
    EmployeeProto employee = 1;
}

message EmployeeAddRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    common.Date joining = 4;
    int32 calendar_id = 5;
    int32 leave_policy_id = 6;
}

message EmployeeUpdateRequest {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    common.Date joining = 5;
}

message EmployeeProto {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    common.Date joining = 5;
    repeated EmployeeCalendarProto calendars = 6;
    repeated EmployeeLeavePolicyProto leave_policies = 7;
}

message EmployeeCalendarProto {
    int32 id = 1;
    int32 calendar_id = 2;
    string calendar_name = 3;
    common.Date start_date = 4;
}

message EmployeeLeavePolicyProto {
    int32 id = 1;
    int32 leave_policy_id = 2;
    string leave_policy_name = 3;
    common.Date start_date = 4;
}





